--- a/frontend/react/index.html
+++ b/frontend/react/index.html
@@ -11,6 +11,17 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
     />
+    <style>
+      html, body {
+        height: 100%;
+        overflow: hidden;
+      }
+      #root {
+        overflow: auto;
+        min-height: 100%;
+      }
+
+    </style>
     <title>Vite + Material UI + TS</title>
   </head>
   <body>
