--- a/frontend/react/index.html
+++ b/frontend/react/index.html
@@ -12,13 +12,16 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
     />
     <style>
-      html, body {
+      /* html, body {
         height: 100%;
         overflow: hidden;
-      }
+      } */
+      /* body {
+        overflow: auto;
+      } */
       #root {
         overflow: auto;
-        min-height: 100%;
+        min-height: 100vh;
       }
 
     </style>
